# gooda-to-afdo-converter

./: CMakeLists.txt  Doxyfile.in  README.md  sonar-project.properties
benchs/: Makefile  bench.sh  bench_ref.sh  compute_overhead_table.awk  compute_table.awk  overhead_ref.sh  parse.sh  parse_overhead.sh  resurrect.sh  test_misses.sh  to_latex.awk  to_latex_overhead.awk
config/: gcc_google_47.cfg  gcc_google_47_base.cfg  gcc_google_47_dehao.cfg  gcc_google_47_instrumentation.cfg  gcc_google_47_overhead_instrumentation.cfg  gcc_google_47_overhead_sampling_lbr.cfg  gcc_google_47_overhead_sampling_ucc.cfg  gcc_google_47_sampling_lbr.cfg  gcc_google_47_sampling_ucc.cfg
include/: Options.hpp  afdo_data.hpp  afdo_diff.hpp  afdo_generator.hpp  afdo_printer.hpp  afdo_reader.hpp  assert.hpp  converter.hpp  data.hpp  diff.hpp  gcov_file.hpp  gcov_types.hpp  generator.hpp  gooda_exception.hpp  gooda_file.hpp  gooda_line.hpp  gooda_reader.hpp  gooda_report.hpp  hash.hpp  likely.hpp  logger.hpp  namespaces.hpp  reader.hpp  utils.hpp
src/: Options.cpp  afdo_data.cpp  afdo_diff.cpp  afdo_generator.cpp  afdo_printer.cpp  afdo_reader.cpp  converter.cpp  data.cpp  diff.cpp  gcov_file.cpp  generator.cpp  gooda_exception.cpp  gooda_file.cpp  gooda_line.cpp  gooda_reader.cpp  gooda_report.cpp  logger.cpp  main.cpp  reader.cpp  utils.cpp
tests/: UnitTest.cpp  simple.cpp
tests/cases/area/: area  area.f90  triangle_operations.mod
tests/cases/area/lbr/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/area/lbr/spreadsheets/asm/: 0_asm.csv  1_asm.csv  2_asm.csv
tests/cases/area/lbr/spreadsheets/cfg/: 0_cfg.dot  1_cfg.dot  2_cfg.dot
tests/cases/area/lbr/spreadsheets/src/: 0_src.csv
tests/cases/area/ucc/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/area/ucc/spreadsheets/asm/: 0_asm.csv  1_asm.csv  2_asm.csv
tests/cases/area/ucc/spreadsheets/cfg/: 0_cfg.dot  1_cfg.dot  2_cfg.dot
tests/cases/area/ucc/spreadsheets/src/: 0_src.csv
tests/cases/deep/: deep  deep.cpp  deep_compute.hpp  deep_sum.hpp
tests/cases/deep/lbr/spreadsheets/: function_hotspots.csv  platform_properties.txt  process.csv
tests/cases/deep/lbr/spreadsheets/asm/: 0_asm.csv  1_asm.csv  2_asm.csv  3_asm.csv  4_asm.csv
tests/cases/deep/lbr/spreadsheets/cfg/: 0_cfg.dot  1_cfg.dot  2_cfg.dot  3_cfg.dot
tests/cases/deep/lbr/spreadsheets/src/: 0_src.csv  1_src.csv  2_src.csv  3_src.csv  4_src.csv
tests/cases/deep/ucc/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/deep/ucc/spreadsheets/asm/: 0_asm.csv  1_asm.csv  2_asm.csv  3_asm.csv  4_asm.csv
tests/cases/deep/ucc/spreadsheets/cfg/: 0_cfg.dot  1_cfg.dot  2_cfg.dot  3_cfg.dot  4_cfg.dot
tests/cases/deep/ucc/spreadsheets/src/: 0_src.csv  1_src.csv  2_src.csv  3_src.csv  4_src.csv
tests/cases/inheritance/: inheritance  inheritance.cpp
tests/cases/inheritance/lbr/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/inheritance/lbr/spreadsheets/asm/: 0_asm.csv
tests/cases/inheritance/lbr/spreadsheets/cfg/: 0_cfg.dot
tests/cases/inheritance/lbr/spreadsheets/src/: 0_src.csv
tests/cases/inheritance/ucc/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/inheritance/ucc/spreadsheets/asm/: 0_asm.csv
tests/cases/inheritance/ucc/spreadsheets/cfg/: 0_cfg.dot
tests/cases/inheritance/ucc/spreadsheets/src/: 0_src.csv
tests/cases/simple/: simple  simple.cpp  simple_cpp
tests/cases/simple-c/: simple  simple.c
tests/cases/simple-c/lbr/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/simple-c/lbr/spreadsheets/asm/: 0_asm.csv
tests/cases/simple-c/lbr/spreadsheets/cfg/: 0_cfg.dot
tests/cases/simple-c/lbr/spreadsheets/src/: 0_src.csv
tests/cases/simple-c/ucc/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/simple-c/ucc/spreadsheets/asm/: 0_asm.csv
tests/cases/simple-c/ucc/spreadsheets/cfg/: 0_cfg.dot
tests/cases/simple-c/ucc/spreadsheets/src/: 0_src.csv
tests/cases/simple/lbr/spreadsheets/: function_hotspots.csv  process.csv
tests/cases/simple/lbr/spreadsheets/asm/: 0_asm.csv
tests/cases/simple/lbr/spreadsheets/cfg/: 0_cfg.dot
tests/cases/simple/lbr/spreadsheets/src/: 0_src.csv
tests/cases/simple/ucc/spreadsheets/: function_hotspots.csv  platform_properties.txt  process.csv
tests/cases/simple/ucc/spreadsheets/asm/: 0_asm.csv
tests/cases/simple/ucc/spreadsheets/cfg/: 0_cfg.dot
tests/cases/simple/ucc/spreadsheets/src/: 0_src.csv
